--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -16,7 +16,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #0e0e0e;
+    background-color: #131313;
     margin-top: 25px;
     border-radius: 20px;
     padding: 10px 15px;
