--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -11,7 +11,7 @@
   padding: 5px 10px;
   margin-bottom: 25px;
   border-radius: 20px;
-  background-color: #0e0e0e;
+  background-color: #131313;
 }
 .project:hover{
   background-color: #131313;
